fixed layout breaks

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -177,11 +177,10 @@ img, svg {
 }
 
 /* STRUCTURE */
-html, body, #root {
+html, body {
     height: 100%;
-    background-color: var(--black);
 }
-#root {
+body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -192,13 +191,12 @@ html, body, #root {
     font-family: 'Gilroy';
     line-height: 1;
     color: var(--white);
+    background-color: var(--black);
 }
 main {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
-    z-index: 1;
-    min-height: 100%;
 }
 .container {
     margin-inline: auto;
